namespace JSEA_Application.DTOs.Respone.Journey;

public class ShareJourneyResponse
{
    public string ShareCode { get; set; } = null!;

    public string SharePath { get; set; } = null!;

    public int PointsEarned { get; set; }
}
