@startuml Class Diagram - Share Journey (Use Case 9)
!theme plain
' **[PLANNED]** Feature not yet implemented in codebase

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 30

top to bottom direction

package "Presentation" {
  class JourneyController <<controller>> {
    - _journeyShareService : IJourneyShareService
    --
    + ShareJourney(request : ShareJourneyRequest) : ShareJourneyResponse
  }
}

package "Application" {
  interface IJourneyShareService <<service>> {
    + ShareJourneyAsync(request : ShareJourneyRequest, travelerId : Guid, ct?) : Task<ShareJourneyResponse?>
  }

  class JourneyShareService <<service>> {
    - _journeyRepository : IJourneyRepository
    - _rewardService : IRewardService
    --
    + ShareJourneyAsync(request : ShareJourneyRequest, travelerId : Guid, ct?) : Task<ShareJourneyResponse?>
  }

  interface IJourneyRepository <<repository>> {
    + GetByIdAsync(id : Guid, ct?) : Task<Journey?>
  }

  interface IRewardService <<service>> {
    + AddRewardPointsAsync(userId : Guid, points : int, reason : string, ct?) : Task
  }

  class RewardService <<service>> {
    + AddRewardPointsAsync(userId : Guid, points : int, reason : string, ct?) : Task
  }
}

package "Infrastructure" {
  class JourneyRepository <<repository>> {
    - _context : AppDbContext
    --
    + GetByIdAsync(id : Guid, ct?) : Task<Journey?>
  }
}

package "DTOs" {
  class ShareJourneyRequest <<DTO>> {
    + JourneyId : Guid
    + ShareChannel : string
  }

  class ShareJourneyResponse <<DTO>> {
    + JourneyId : Guid
    + ShareLink : string
    + PointsEarned : int
  }
}

package "Domain" {
  class Journey <<entity>> {
    + Id : Guid
    + TimeBudgetMinutes : int
    + Status : JourneyStatus
  }

  class User <<entity>> {
    + Id : Guid
    + Email : string
  }
}

' Relationships
JourneyController --> IJourneyShareService
JourneyController ..> ShareJourneyRequest
JourneyController ..> ShareJourneyResponse

JourneyShareService ..|> IJourneyShareService
JourneyShareService --> IJourneyRepository
JourneyShareService --> IRewardService
JourneyShareService ..> ShareJourneyRequest
JourneyShareService ..> ShareJourneyResponse

JourneyRepository ..|> IJourneyRepository
JourneyRepository --> Journey

RewardService ..|> IRewardService

Journey "*" --> "1" User : traveler

@enduml